jdul naming changes

--- a/public/templates/agb/ds-jdul-de.html
+++ b/public/templates/agb/ds-jdul-de.html
@@ -1,6 +1,6 @@
 <div class="container">
     <h3 class='text-orange col-sm-12'>Datenschutzinformationsblatt</h3>
-	<h4>Sommerprogramm Jugenddienst Bozen-Land</h4>
+	<h4>Sommerprogramm Jugenddienst Unterland</h4>
 	    <div class='col-sm-9'>
 			<p>Wir freuen uns, dass Du an unserem Sommerprogramm teilnehmen möchtest. Damit Du teilnehmen kannst, benötigen wir einige Daten von Dir. Welche das sind, erfahren Du und Deine Eltern / erziehungsberechtigten Personen in diesem Informationsblatt.</p>
 			<ol>
@@ -19,18 +19,18 @@
 				<li>
 					<h4>Freiwilligkeit der Verarbeitung</h4>
 					<div>
-						Die Erhebung und Verarbeitung der personenbezogenen Daten seitens des JD Bozen-Land erfolgt freiwillig. Du bist also nicht verpflichtet, irgendwelche personenbezogenen Daten dem JD Bozen-Land zu übermitteln. Wenn Du aber am Sommerprogramm teilnehmen willst, musst Du uns die notwendigen Daten zur Verfügung stellen.
+						Die Erhebung und Verarbeitung der personenbezogenen Daten seitens des JD Unterland erfolgt freiwillig. Du bist also nicht verpflichtet, irgendwelche personenbezogenen Daten dem JD Unterland zu übermitteln. Wenn Du aber am Sommerprogramm teilnehmen willst, musst Du uns die notwendigen Daten zur Verfügung stellen.
 					</div>
 				</li>
 				<li>
 					<h4>Verantwortlicher für die Verarbeitung der personenbezogenen Daten</h4>
 					<div>
-						Verantwortlich für die Verarbeitung der personenbezogenen Daten ist der Jugenddienst Bozen-Land EO („JD Bozen-Land“), Andreas-Hofer-Straße 36, 39100 Bozen, Steuernummer: 94072680211 in Person des Vorsitzenden, Tel. 0471-324753, E-Mail: info@jugenddienst.com.
+						Verantwortlich für die Verarbeitung der personenbezogenen Daten ist der Jugenddienst Unterland EO („JD Unterland“), Andreas-Hofer-Straße 36, 39100 Bozen, Steuernummer: 94072680211 in Person des Vorsitzenden, Tel. 0471-324753, E-Mail: info@jugenddienst.com.
 					</div>
 				</li>
 				<li>
 					<h4>Art der personenbezogenen Daten, die verarbeitet werden</h4>
-					<div>Der JD Bozen-Land weist darauf hin, dass sowohl allgemeine personenbezogene Daten, als auch besondere Kategorien von personenbezogenen Daten (sensible Daten wie Gesundheitsdaten) erhoben und verarbeitet (gespeichert, weitergegeben, usw.) werden.</div>
+					<div>Der JD Unerland weist darauf hin, dass sowohl allgemeine personenbezogene Daten, als auch besondere Kategorien von personenbezogenen Daten (sensible Daten wie Gesundheitsdaten) erhoben und verarbeitet (gespeichert, weitergegeben, usw.) werden.</div>
 				</li>
 				<li>
 					<h4>Mitteilung der Daten an Dritte</h4>
@@ -104,21 +104,21 @@
 						</tr>
 						<tr>
 							<td>Telefonnummer / Handynummer der Eltern / erziehungsberechtigten Persone</td>
-							<td>Art. 6, Abs. 1, Buchst. f) – berechtigtes Interesse des JD Bozen-Land bei dringenden organisatorischen Angelegenheiten (Termine, Terminverschiebungen, etc.) mit den Eltern / erziehungsberechtigten Personen unmittelbar Kontakt aufnehmen zu können. Das Interesse des JD Bozen-Land, organisatorische Mitteilungen hinsichtlich des Programms, an welchem das Kind / der Jugendliche teilnimmt, vorzunehmen überwiegt dem Recht auf Schutz der Daten der  Eltern</td>
+							<td>Art. 6, Abs. 1, Buchst. f) – berechtigtes Interesse des JD Unterland bei dringenden organisatorischen Angelegenheiten (Termine, Terminverschiebungen, etc.) mit den Eltern / erziehungsberechtigten Personen unmittelbar Kontakt aufnehmen zu können. Das Interesse des JD Unterland, organisatorische Mitteilungen hinsichtlich des Programms, an welchem das Kind / der Jugendliche teilnimmt, vorzunehmen überwiegt dem Recht auf Schutz der Daten der  Eltern</td>
 							<td>Ende des darauffolgenden Kalenderjahres</td>
 							<td>Onlineanmeldeprogramm läuft über einen angemieteten Server, der in Österreich belegen ist</td>
 							<td>Art. 6, Abs. 1, Buchst. b) und c) iVm Art. 28 – Übermittlung erfolgt auf Grundlage eines Auftragsverarbeitungsvertrages</td>
 						</tr>
 						<tr>
 							<td>Telefonnummer \/ Handynummer des Notfallkontakts (falls nicht Eltern \/ erziehungsberechtigten Personen)></td>
-							<td>Art. 6, Abs. 1, Buchst. f) – berechtigtes Interesse des JD Bozen-Land, bei Dringlichkeiten Notfallkontakt erreichen zu können. Das Interesse des JD Bozen-Land, im Bedarfsfall den Notfallkontakt erreichen zu können überwiegt dem Interesse des Notfallkontakts auf das Recht des Schutzes der Daten</td>
+							<td>Art. 6, Abs. 1, Buchst. f) – berechtigtes Interesse des JD Unterland, bei Dringlichkeiten Notfallkontakt erreichen zu können. Das Interesse des JD Unterland, im Bedarfsfall den Notfallkontakt erreichen zu können überwiegt dem Interesse des Notfallkontakts auf das Recht des Schutzes der Daten</td>
 							<td>Ende des darauffolgenden Kalenderjahres</td>
 							<td>Onlineanmeldeprogramm läuft über einen angemieteten Server, der in Österreich belegen ist</td>
 							<td>Art. 6, Abs. 1, Buchst. b) und c) iVm Art. 28 – Übermittlung erfolgt auf Grundlage eines Auftragsverarbeitungsvertrages</td>
 						</tr>
 						<tr>
 							<td>E-Mail der Eltern / der erziehungsberechtigten Personen</td>
-							<td>Interesse des JD Bozen-Land, organisatorische Informationen (bspw. zum Programm, Hinweise, etc.) den Eltern / erziehungsberechtigten Personen papierlos zusenden zu können. Das Interesse des JD Bozen-Land, organisatorische Mitteilungen hinsichtlich des Programms, an welchem das Kind / der Jugendliche teilnimmt, vorzunehmen überwiegt dem Recht auf Schutz der Daten der Eltern / erziehungsberechtigten Personen</td>
+							<td>Interesse des JD Unterland, organisatorische Informationen (bspw. zum Programm, Hinweise, etc.) den Eltern / erziehungsberechtigten Personen papierlos zusenden zu können. Das Interesse des JD Unterland, organisatorische Mitteilungen hinsichtlich des Programms, an welchem das Kind / der Jugendliche teilnimmt, vorzunehmen überwiegt dem Recht auf Schutz der Daten der Eltern / erziehungsberechtigten Personen</td>
 							<td>Die Daten werden für die Zusendung des Programmkatalogs für kommende Jahre gespeichert, um die Eltern / erziehungsberechtigten Personen über die nächsten Sommerprogramme zu informieren. Diese Daten werden bei Ausübung Recht auf Löschung gelöscht</td>
 							<td>Onlineanmeldeprogramm läuft über einen angemieteten Server, der in Österreich belegen ist</td>
 							<td>Art. 6, Abs. 1, Buchst. b) und c) iVm Art. 28 – Übermittlung erfolgt auf Grundlage eines Auftragsverarbeitungsvertrages</td>
@@ -178,7 +178,7 @@
 								<tr>
 									<td>Gesundheitsdaten (ärztliches Attest, welches die Nichtteilnahme am Pro-gramm wegen Krankheit bestätigt</td>
 									<td>Art. 6, Abs. 1, Buchst. a) b) und d) sowie Art. 9, Abs. 1 – notwendig, um die Anzahlung für das Programm zurückzuerhal-ten; gerechtfertigte Auflösung des Vertrages; Einwilligung der erziehungsberechtigten Personen notwendig</td>
-									<td>Nach Verifizierung seitens des JD Bozen-Land, dass der Auflö-sungsgrund des Vertra-ges besteht</td>
+									<td>Nach Verifizierung seitens des JD Unterland, dass der Auflö-sungsgrund des Vertra-ges besteht</td>
 									<td></td>
 									<td></td>
 								</tr>
@@ -203,13 +203,13 @@
 							<tbody>
 								<tr>
 									<td>Vor- und Nachname für Öffentlichkeits-arbeit</td>
-									<td>Art. 6, Abs. 1, Buchst. a) – Einwilligung der betroffenen Person (bzw. Eltern /erziehungsberechtigten Perso-nen) notwendig, um deren Vor- und Nachnamen für die Öffent-lichkeitsarbeit des JD Bozen-Land zu verwenden</td>
-									<td>Bei Veröffentlichungen in Medien bei Aus-übung Recht auf Löschen; Löschvorgang muss für den JD Bozen-Land  zumutbar sein</td>
+									<td>Art. 6, Abs. 1, Buchst. a) – Einwilligung der betroffenen Person (bzw. Eltern /erziehungsberechtigten Personen) notwendig, um deren Vor- und Nachnamen für die Öffent-lichkeitsarbeit des JD Unterland zu verwenden</td>
+									<td>Bei Veröffentlichungen in Medien bei Aus-übung Recht auf Löschen; Löschvorgang muss für den JD Unterland  zumutbar sein</td>
 									<td>
 										<ul>
-											<li>Homepage des JD Bozen-Land</li>
-											<li>Newsletter des JD Bozen-Land</li>
-											<li>Hauseigene Veröffentli-chungen</li>
+											<li>Homepage des JD Unterland</li>
+											<li>Newsletter des JD Unterland</li>
+											<li>Hauseigene Veröffentlichungen</li>
 											<li>Lokale Printmedien</li>
 											<li>Soziale Medien</li>
 										</ul>
@@ -218,12 +218,12 @@
 								</tr>
 								<tr>
 									<td>Lichtbild für Öffentlichkeitsarbeit</td>
-									<td>Art. 6, Abs. 1, Buchst. a) – Einwilligung der betroffenen Person (bzw. Eltern /erziehungsberechtigten Perso-nen) notwendig, um deren Lichtbild für die Öffentlich-keitsarbeit des JD Bozen-Land zu verwenden</td>
-									<td>in Medien bei Ausübung Recht auf Löschen; Löschvorgang muss für den JD Bozen-Land  zumutbar sein</td>
+									<td>Art. 6, Abs. 1, Buchst. a) – Einwilligung der betroffenen Person (bzw. Eltern /erziehungsberechtigten Perso-nen) notwendig, um deren Lichtbild für die Öffentlich-keitsarbeit des JD Unterland zu verwenden</td>
+									<td>in Medien bei Ausübung Recht auf Löschen; Löschvorgang muss für den JD Unterland  zumutbar sein</td>
 									<td>
 										<ul>
-											<li>Homepage des JD Bozen-Land</li>
-											<li>Newsletter des JD Bozen-Land</li>
+											<li>Homepage des JD Unterland</li>
+											<li>Newsletter des JD Unterland</li>
 											<li>Hauseigene Veröffentli-chungen</li>
 											<li>Lokale Printmedien</li>
 											<li>Soziale Medien</li>
@@ -238,7 +238,7 @@
 				<li>
 					<h4>Art der Speicherung</h4>
 					<div>
-						Der JD Bozen-Land verarbeitet Deine personenbezogenen Daten in digitaler Form (elektronische Speicherung der Daten). Dabei ge-währleistet der JD Bozen-Land den größtmöglichen Schutz Deiner personenbezogenen Daten durch entsprechende technische und orga-nisatorische Maßnahmen.
+						Der JD Unterland verarbeitet Deine personenbezogenen Daten in digitaler Form (elektronische Speicherung der Daten). Dabei ge-währleistet der JD Unterland den größtmöglichen Schutz Deiner personenbezogenen Daten durch entsprechende technische und orga-nisatorische Maßnahmen.
 					</div>
 				</li>
 				<li>
@@ -262,13 +262,13 @@
 				<li>
 					<h4>Weigerung</h4>
 					<div>
-						Solltest Du die notwendigen Daten nicht oder nicht zeitgerecht zur Verfügung stellen, kannst Du nicht am Sommerprogramm teilnehmen. Jedenfalls übernimmt der JD Bozen-Land aus Deiner Weigerung wegen keine Haftungen, weder Dir noch Dritten gegenübe
+						Solltest Du die notwendigen Daten nicht oder nicht zeitgerecht zur Verfügung stellen, kannst Du nicht am Sommerprogramm teilnehmen. Jedenfalls übernimmt der JD Unterland aus Deiner Weigerung wegen keine Haftungen, weder Dir noch Dritten gegenübe
 					</div>
 				</li>
 				<li>
 					<h4>Recht auf Berichtigung, Löschung, „Vergessenwerden“, Einschränkung und Widerspruch</h4>
 					<div>
-						Du hast das Recht auf Berichtigung oder Löschung, auch „Vergessenwerden“ Deiner personenbezogenen Daten oder auf Einschränkung der Verarbeitung Ihrer Daten. Ebenso hast Du ein Widerspruchsrecht gegen die Verarbeitung. Ein entsprechender Antrag kann formlos an den JD Bozen-Land gestellt werden.
+						Du hast das Recht auf Berichtigung oder Löschung, auch „Vergessenwerden“ Deiner personenbezogenen Daten oder auf Einschränkung der Verarbeitung Ihrer Daten. Ebenso hast Du ein Widerspruchsrecht gegen die Verarbeitung. Ein entsprechender Antrag kann formlos an den JD Unterland gestellt werden.
 					</div>
 				</li>
 				<li>
@@ -280,13 +280,13 @@
 				<li>
 					<h4>Aushändigung von Kopien</h4>
 					<div>
-						Du kannst eine Kopie Deiner vom JD Bozen-Land erhobenen und verarbeiteten personenbezogenen Daten beantragen. Die Übermittlung der Kopien erfolgt grundsätzlich in elektronischer Form, außer Du beantragst ausdrücklich eine Aushändigung in Papierform. Werden weitere Kopien beantragt, so kann der JD Bozen-Land ein angemessenes Entgelt hierfür in Rechnung stellen.
+						Du kannst eine Kopie Deiner vom JD Unterland erhobenen und verarbeiteten personenbezogenen Daten beantragen. Die Übermittlung der Kopien erfolgt grundsätzlich in elektronischer Form, außer Du beantragst ausdrücklich eine Aushändigung in Papierform. Werden weitere Kopien beantragt, so kann der JD Unterland ein angemessenes Entgelt hierfür in Rechnung stellen.
 					</div>
 				</li>
 				<li>
 					<h4>Recht auf Datenübertragbarkeit</h4>
 					<div>
-						Du hast das Recht, Deine personenbezogenen Daten, die Du dem JD Bozen-Land zur Verfügung gestellt hast, in einem strukturierten, gängigen und lesbaren Format zu erhalten. Ebenso hast Du das Recht, dass Deine Daten einer anderen, von Dir bezeichneten Person, ohne Behinderung übermittelt werden.
+						Du hast das Recht, Deine personenbezogenen Daten, die Du dem JD Unterland zur Verfügung gestellt hast, in einem strukturierten, gängigen und lesbaren Format zu erhalten. Ebenso hast Du das Recht, dass Deine Daten einer anderen, von Dir bezeichneten Person, ohne Behinderung übermittelt werden.
 					</div>
 				</li>
 				<li>
@@ -298,7 +298,7 @@
 				<li>
 					<h4>Öffentlichkeitsarbeit – Fakultative Einwilligung</h4>
 					<div>
-						Es ist ein Anliegen des JD Bozen-Land, seine Tätigkeit auch der Öffentlichkeit vorzustellen. Da die Erfüllung dieses Anliegens nicht notwendig für die Teilnahme am Sommerprogramm ist, bedarf es einer ausdrücklichen Einwilligung seitens der erziehungsberechtigten Personen.
+						Es ist ein Anliegen des JD Unterland, seine Tätigkeit auch der Öffentlichkeit vorzustellen. Da die Erfüllung dieses Anliegens nicht notwendig für die Teilnahme am Sommerprogramm ist, bedarf es einer ausdrücklichen Einwilligung seitens der erziehungsberechtigten Personen.
 					</div>
 				</li>
 			</ol>
