--- a/public/templates/agb/ds-jdbl-it.html
+++ b/public/templates/agb/ds-jdbl-it.html
@@ -201,103 +201,103 @@
 							</thead>
 							<tbody>
 								<tr>
-									<td>Vor- und Nachname für Öffentlichkeits-arbeit</td>
-									<td>Art. 6, Abs. 1, Buchst. a) – Einwilligung der betroffenen Person (bzw. Eltern /erziehungsberechtigten Perso-nen) notwendig, um deren Vor- und Nachnamen für die Öffent-lichkeitsarbeit des JD Bozen-Land zu verwenden</td>
-									<td>Bei Veröffentlichungen in Medien bei Aus-übung Recht auf Löschen; Löschvorgang muss für den JD Bozen-Land  zumutbar sein</td>
+									<td>Nome e cognome per le pubbliche relazioni</td>
+									<td>Art. 6, comma 1, lettera a) – Necessario consenso dell'interes-sato (o dei genitori/ esercenti potestà genitoriale) per l'utilizzo del nome e cognome per le pubbliche relazioni del JD Bozen-Land</td>
+									<td>Nel caso di pubblica-zioni nei media al momento dell’esercizio del diritto di cancella-zione; il processo di cancellazione deve essere ragionevole per il JD Bozen-Land</td>
 									<td>
 										<ul>
-											<li>Homepage des JD Bozen-Land</li>
-											<li>Newsletter des JD Bozen-Land</li>
-											<li>Hauseigene Veröffentli-chungen</li>
-											<li>Lokale Printmedien</li>
-											<li>Soziale Medien</li>
+											<li>Sito weg del JD Bozen-Land</li>
+											<li>Newsletter del JD Bozen-Land </li>
+											<li>pubblicazioni interne</li>
+											<li>Stampa locale</li>
+											<li>Social media</li>
 										</ul>
 									</td>
-									<td>Art. 6, Abs. 1, Buchst. a) – Einwilli-gung der betroffenen Person notwendig</td>
+									<td>Articolo 6, comma 1, lettera a) – necessario il consenso dell'interessato (o dei genitori/ esercenti potestà genitoriale)</td>
 								</tr>
 								<tr>
-									<td>Lichtbild für Öffentlichkeitsarbeit</td>
-									<td>Art. 6, Abs. 1, Buchst. a) – Einwilligung der betroffenen Person (bzw. Eltern /erziehungsberechtigten Perso-nen) notwendig, um deren Lichtbild für die Öffentlich-keitsarbeit des JD Bozen-Land zu verwenden</td>
-									<td>in Medien bei Ausübung Recht auf Löschen; Löschvorgang muss für den JD Bozen-Land  zumutbar sein</td>
+									<td>Foto e/o video per le pubbliche relazioni</td>
+									<td>Art. 6, comma 1, lettera a) – Necessario consenso dell'interes-sato (o dei genitori/ esercenti potestà genitoriale ) per l'utiliz-zo del nome e cognome per le pubbliche relazioni del JD Bozen-Land</td>
+									<td>Nel caso di pubblica-zioni nei media al momento dell’esercizio del diritto di cancella-zione; il processo di cancellazione deve essere ragionevole per il JD Bozen-Land</td>
 									<td>
 										<ul>
-											<li>Homepage des JD Bozen-Land</li>
-											<li>Newsletter des JD Bozen-Land</li>
-											<li>Hauseigene Veröffentli-chungen</li>
-											<li>Lokale Printmedien</li>
-											<li>Soziale Medien</li>
+											<li>Sito weg del JD Bozen-Land</li>
+											<li>Newsletter del JD Bozen-Land </li>
+											<li>pubblicazioni interne</li>
+											<li>Stampa locale</li>
+											<li>Social media</li>
 										</ul>
 									</td>
-									<td>Art. 6, Abs. 1, Buchst. a) – Einwilli-gung der betroffenen Person notwendig</td>
+									<td>Articolo 6, comma 1, lettera a) – necessario il consenso dell'interessato (o dei genitori/ esercenti potestà genitoriale)</td>
 								</tr>
 							</tbody>
 						</table>
 					</div>
 				</li>
 				<li>
-					<h4>Art der Speicherung</h4>
+					<h4>Tipo di conservazione dei dati</h4>
 					<div>
-						Der JD Bozen-Land verarbeitet Deine personenbezogenen Daten in digitaler Form (elektronische Speicherung der Daten). Dabei ge-währleistet der JD Bozen-Land den größtmöglichen Schutz Deiner personenbezogenen Daten durch entsprechende technische und orga-nisatorische Maßnahmen.
+						Il JD Bozen-Land elabora i tuoi dati personali in forma digitale (archiviazione elettronica dei dati). Il JD Bozen-Land garantisce la mas-sima protezione dei vostri dati personali attraverso adeguate misure tecniche e organizzative.
 					</div>
 				</li>
 				<li>
-					<h4>Mitteilung der Daten an Drittländer oder internationale Organisatione</h4>
+					<h4>Comunicazione dei dati a paesi terzi o organizzazioni internazionali</h4>
 					<div>
-						Es werden keine personenbezogenen Daten an einem Empfänger in einem Drittland oder einer internationalen Organisation übermittelt.
+						Nessun dato personale viene trasferito a un destinatario in un paese terzo o a un'organizzazione internazionale.
 					</div>
 				</li>
 				<li>
-					<h4>Auskunftsrecht</h4>
-					<div>Du hast das Recht auf Auskunft über:
+					<h4>Diritto all'informazione</h4>
+					<div>Hai il diritto di sapere:
 						<ul>
-							<li>die Herkunft der personenbezogenen Daten;</li>
-							<li>den Zweck und die Modalitäten der Verarbeitung;</li>
-							<li>das angewandte System, falls die Daten elektronisch verarbeitet werden;</li>
-							<li>die wichtigsten Daten zur Identifizierung des Rechtsinhabers und der Verantwortlichen;</li>
-							<li>die Personen oder Kategorien von Personen, denen die personenbezogenen Daten übermittelt werden können oder die als im Staatsgebiet namhaft gemachte Vertreter, als Verantwortliche oder als Beauftragte davon Kenntnis erlangen können.</li>
+							<li>l'origine dei dati personali;</li>
+							<li>le finalità e le modalità del trattamento;</li>
+							<li>il sistema applicato, se i dati sono trattati elettronicamente</li>
+							<li>i principali dati identificativi del titolare del diritto e dei responsabili;</li>
+							<li>dei soggetti o delle categorie di soggetti ai quali i dati personali possono essere comunicati o che possono venirne a conoscenza in qualità di rappresentante designato nel territorio dello Stato, di responsabili o incaricati.</li>
 						</ul>
 				   </div>
 				</li>
 				<li>
-					<h4>Weigerung</h4>
+					<h4>Rifiuto</h4>
 					<div>
-						Solltest Du die notwendigen Daten nicht oder nicht zeitgerecht zur Verfügung stellen, kannst Du nicht am Sommerprogramm teilnehmen. Jedenfalls übernimmt der JD Bozen-Land aus Deiner Weigerung wegen keine Haftungen, weder Dir noch Dritten gegenübe
+						Se non fornisci i dati necessari o non li fornisci in tempo, non potrai partecipare al programma estivo. In ogni caso, il JD Bozen-Land non si assume alcuna responsabilità, né verso di te né verso terzi, a causa del tuo rifiuto.
 					</div>
 				</li>
 				<li>
-					<h4>Recht auf Berichtigung, Löschung, „Vergessenwerden“, Einschränkung und Widerspruch</h4>
+					<h4>Diritto di rettifica, cancellazione, "dimenticanza", restrizione e opposizione</h4>
 					<div>
-						Du hast das Recht auf Berichtigung oder Löschung, auch „Vergessenwerden“ Deiner personenbezogenen Daten oder auf Einschränkung der Verarbeitung Ihrer Daten. Ebenso hast Du ein Widerspruchsrecht gegen die Verarbeitung. Ein entsprechender Antrag kann formlos an den JD Bozen-Land gestellt werden.
+						Hai il diritto di far correggere o cancellare, anche "all’oblio" dei tuoi dati personali o di limitare il trattamento dei tuoi dati. Hai anche il diritto di opporti al trattamento. Una richiesta in tal senso può essere inoltrata in modo informale al JD Bozen-Land.
 					</div>
 				</li>
 				<li>
-					<h4>Beschwerderecht bei einer Aufsichtsbehörde</h4>
+					<h4>Diritto di ricorso ad un'autorità di vigilanza</h4>
 					<div>
-						Du hast das Recht, bezüglich der Erhebung und Verarbeitung Deiner personenbezogenen Daten Beschwerde bei einer vom italienischen Staat hierfür bezeichneten Aufsichtsbehörde (dzt. italienische Datenschutzbehörde Garante per la protezione dei dati personali) zu erheben.
+						Hai il diritto di presentare un reclamo in merito alla raccolta e al trattamento dei tuoi dati personali presso un'autorità di controllo designata a tal fine dallo Stato italiano (attualmente il Garante per la protezione dei dati personali).
 					</div>
 				</li>
 				<li>
-					<h4>Aushändigung von Kopien</h4>
+					<h4>Consegna di copie</h4>
 					<div>
-						Du kannst eine Kopie Deiner vom JD Bozen-Land erhobenen und verarbeiteten personenbezogenen Daten beantragen. Die Übermittlung der Kopien erfolgt grundsätzlich in elektronischer Form, außer Du beantragst ausdrücklich eine Aushändigung in Papierform. Werden weitere Kopien beantragt, so kann der JD Bozen-Land ein angemessenes Entgelt hierfür in Rechnung stellen.
+						Puoi richiedere una copia dei tuoi dati personali raccolti e trattati dal JD Bozen-Land. La trasmissione delle copie avverà in forma elettro-nica, a meno che non si richieda espressamente una copia cartacea. Se vengono richieste ulteriori copie, il JD Bozen-Land può addebitare un compenso adeguato. 
 					</div>
 				</li>
 				<li>
-					<h4>Recht auf Datenübertragbarkeit</h4>
+					<h4>Diritto alla portabilità dei dati</h4>
 					<div>
-						Du hast das Recht, Deine personenbezogenen Daten, die Du dem JD Bozen-Land zur Verfügung gestellt hast, in einem strukturierten, gängigen und lesbaren Format zu erhalten. Ebenso hast Du das Recht, dass Deine Daten einer anderen, von Dir bezeichneten Person, ohne Behinderung übermittelt werden.
+						Hai il diritto di ricevere i tuoi dati personali che hai fornito al JD Bozen-Land in un formato strutturato, comune e leggibile. Hai inoltre il diritto di far trasferire i tuoi dati ad un'altra persona da te designata senza alcun impedimento.
 					</div>
 				</li>
 				<li>
-					<h4>Verarbeitung von Gesundheitsdaten</h4>
+					<h4>Elaborazione dei dati sanitari</h4>
 					<div>
-						Für die Teilnahme am Sommerprogramm ist die Verarbeitung von Gesundheitsdaten notwendig. Da es sich hierbei um besonders schützenswerte Daten handelt, ist die Einwilligung der Eltern / erziehungsberechtigten Personen notwendig.
+						L'elaborazione dei dati sanitari è necessaria per la partecipazione al programma estivo. Poiché questi dati sono particolarmente degni di protezione, è necessario il consenso dei genitori / esercenti della potestà genitoriale.
 					</div>
 				</li>
 				<li>
-					<h4>Öffentlichkeitsarbeit – Fakultative Einwilligung</h4>
+					<h4>Relazioni pubbliche - Consenso facoltativo</h4>
 					<div>
-						Es ist ein Anliegen des JD Bozen-Land, seine Tätigkeit auch der Öffentlichkeit vorzustellen. Da die Erfüllung dieses Anliegens nicht notwendig für die Teilnahme am Sommerprogramm ist, bedarf es einer ausdrücklichen Einwilligung seitens der erziehungsberechtigten Personen.
+						È intenzione del JD Bozen-Land a presentare le sue attività al pubblico. Poiché l'adempimento di questa richiesta non è necessario per la partecipazione al programma estivo, è necessario il consenso esplicito delle persone che esercitano la potestà genitoriale.
 					</div>
 				</li>
 			</ol>
