format ebk info text

--- a/public/templates/registration/registration.html
+++ b/public/templates/registration/registration.html
@@ -261,7 +261,7 @@
 							</div>
 						</div>
 						<br />
-						<div ng-show="platform.isKiso() alert alert-info">
+						<div ng-show="platform.isKiso() || platform.isTest()" class="alert alert-info col-sm-10">
 							{{"RESERVATION.INFO_EBK_DOWNLOAD" | translate}}
 						</div>
 						<!-- NEEDSAbK -->
