typos agb/ds and ital. trnaslations

--- a/public/templates/agb/ds-jdbl-it.html
+++ b/public/templates/agb/ds-jdbl-it.html
@@ -4,7 +4,7 @@
 			<p>Siamo lieti che vuoi partecipare al nostro programma estivo. Per poter partecipare, abbiamo bisogno di alcuni dati personali che Ti riguar-dano. Con la presente informativa informiamo Te e i tuoi genitori/esercenti della potestà genitoriale quali dati per quali obiettivi tratteremo.</p>
 			<ol>
 				<li>
-					<h4>1.	Finalità del conferimento dei dati personali</h4>
+					<h4>Finalità del conferimento dei dati personali</h4>
 					<div>
 						Abbiamo bisogno alcuni dati personali che Ti riguardano in modo da sapere chi partecipa al programma estivo, quanti anni ha e quale classe frequenti, poiché la partecipazione al programma estivo è riservato ai giovani di una certa età. Abbiamo bisogno anche dei dati dei tuoi genitori / esercenti della potestà genitoriale per questioni organizzative e contatti in caso di emergenza. Inoltre, abbiamo bisogno di alcuni dati sanitari, in modo da poterci adeguare al meglio a concrete esigenze tue (ad es. cibo, disabilità, ecc.) e per poterti aiutare diret-tamente se necessario. Dati personali che useremo per pubbliche relazioni (vorremmo pubblicare p.e. tue foto) non sono necessari per la partecipazione al programma estivo. Per poterli trattare, abbiamo bisogno del consenso dei vostri genitori/ esercenti la potestà genitoriale.
 					</div>
