--- a/public/templates/agb/ds-jdul-de.html
+++ b/public/templates/agb/ds-jdul-de.html
@@ -25,7 +25,7 @@
 				<li>
 					<h4>Verantwortlicher für die Verarbeitung der personenbezogenen Daten</h4>
 					<div>
-						Verantwortlich für die Verarbeitung der personenbezogenen Daten ist der Jugenddienst Unterland EO („JD Unterland“), Andreas-Hofer-Straße 36, 39100 Bozen, Steuernummer: 94072680211 in Person des Vorsitzenden, Tel. 0471-324753, E-Mail: info@jugenddienst.com.
+						Verantwortlich für die Verarbeitung der personenbezogenen Daten ist der Jugenddienst Unterland EO („JD Unterland“), Widumdurchgang 1, 39044 Neumarkt, Steuernummer: 94008770219 in Person des Vorsitzenden, Tel. 0471-812717, E-Mail: unterland@jugenddienst.it.
 					</div>
 				</li>
 				<li>
@@ -35,13 +35,13 @@
 				<li>
 					<h4>Mitteilung der Daten an Dritte</h4>
 					<div>
-						Deine personenbezogenen Daten werden an Dritte weitergeleitet. Die Weiterleitung erfolgt dabei an unserem Auftragsverarbeiter, über welchen wir die Onlineanmeldung vornehmen.
+						Deine personenbezogenen Daten werden an Dritte weitergeleitet. Die Weiterleitung erfolgt dabei an unseren Auftragsverarbeiter, über welchen wir die Onlineanmeldung vornehmen.
 					</div>
 				</li>
 				<li>
 					<h4>Dauer der Verarbeitung</h4>
 					<div>
-						Deine Daten werden grundsätzlich bis zum Ende des darauffolgenden Kalenderjahres gespeichert, um jenen Personen, die eine Teilnahmebestätigung für fiskalische Zwecke benötigen, bereitstellen zu können. Zudem werden die Programme von der öffentlichen Hand mitfinanziert, weshalb diese Daten für den genannten Zeitraum für etwaige Kontrollen gespeichert werden müssen. Einzelheiten findest Du in der nachstehenden Übersicht.
+						Deine Daten werden grundsätzlich bis zum Ende des darauffolgenden Kalenderjahres gespeichert. Zudem werden die Programme von der öffentlichen Hand mitfinanziert, weshalb diese Daten für den genannten Zeitraum für etwaige Kontrollen gespeichert werden müssen. Einzelheiten findest Du in der nachstehenden Übersicht.
 					</div>
 				</li>
 				<li>
@@ -242,7 +242,7 @@
 					</div>
 				</li>
 				<li>
-					<h4>Mitteilung der Daten an Drittländer oder internationale Organisatione</h4>
+					<h4>Mitteilung der Daten an Drittländer oder internationale Organisationen</h4>
 					<div>
 						Es werden keine personenbezogenen Daten an einem Empfänger in einem Drittland oder einer internationalen Organisation übermittelt.
 					</div>
@@ -262,7 +262,7 @@
 				<li>
 					<h4>Weigerung</h4>
 					<div>
-						Solltest Du die notwendigen Daten nicht oder nicht zeitgerecht zur Verfügung stellen, kannst Du nicht am Sommerprogramm teilnehmen. Jedenfalls übernimmt der JD Unterland aus Deiner Weigerung wegen keine Haftungen, weder Dir noch Dritten gegenübe
+						Solltest Du die notwendigen Daten nicht oder nicht zeitgerecht zur Verfügung stellen, kannst Du nicht am Sommerprogramm teilnehmen. Jedenfalls übernimmt der JD Unterland aus Deiner Weigerung wegen keine Haftungen, weder Dir noch Dritten gegenüber.
 					</div>
 				</li>
 				<li>
