reservation on error

--- a/public/templates/agb/ds-jdbl-it.html
+++ b/public/templates/agb/ds-jdbl-it.html
@@ -24,7 +24,7 @@
 				<li>
 					<h4>Titolare del trattamento dei dati personali</h4>
 					<div>
-						Responsabile del trattamento dei dati personali è lo Jugenddienst Bozen-Land EO ("JD Bozen-Land"), Via Andreas Hofer 36, 39100 Bolzano, codice fiscale: 94072680211 in persona dell’attuale presidente, telefono 0471-324753, e-mail: info@jugenddienst.com.
+						Responsabile del trattamento dei dati personali è lo Jugenddienst Bozen-Land EO ("JD Bozen-Land"), Passaggio canonica 1, 39044 Egna, codice fiscale: 94008770219 in persona dell’attuale presidente, telefono 0471-812717, e-mail: unterland@jugenddienst.it.
 					</div>
 				</li>
 				<li>
